--- a/scss/parts/page-header.scss
+++ b/scss/parts/page-header.scss
@@ -31,9 +31,15 @@
 					align-items: center;
 					justify-content: center;
 					text-align: center;
-					gap: 15px;			
-					.btn {}
-					.btn:hover {}
+					flex-wrap: wrap;
+					gap: 15px;
+					p {
+						margin: 0;				
+						.btn {
+							margin: 0;
+						}
+						.btn:hover {}
+					}		
 				}
 			}
 		}
